test/TestSuite/Syntax/Errors/eof_in_istring3.tjp
project test "Test" "1.0" 2009-08-25 +2m 

# MARK: error 6 eof_in_istring3
task t -8<-
  foo
  -